recursion.lessons.recursion.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    { 
   gauche(90)
   avance() 
     gauche(90)
   avance()
   avance(+1)
   gauche(90)
   spiral(100,91,1,2);